--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -33,6 +33,8 @@ _inputs:
     cascade: true
   header-style:
     type: select
+    label: Header style
+    comment: Choose how much of the width of the screen the image takes up
     options:
       values: 
         - full width
