Large image and multi text grid
made this dynamic with the classes cards and also added fancy if statement to make 'see more' pop up after there's more than 4 classes

--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -23,3 +23,19 @@ card-loop:
           laudantium, dolor blandi.
         button-text: Sign up
         button-link: /schedule.html
+      - image: /images/yoga-studio-3.jpg
+        alt:
+        heading: Vinyasa Flow
+        text: >-
+          Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium
+          laudantium, dolor blandi.
+        button-text: Sign up
+        button-link: /schedule.html
+      - image: /images/yoga-studio-7.jpg
+        alt:
+        heading: Iyengar Yoga
+        text: >-
+          Laudantium Dolor sit amet isicing elit. Dolorem nditiis laudantium
+          laudantium, dolor blandi.
+        button-text: Sign up
+        button-link: /schedule.html
