adding liquid tag to the large image multi-text grid
then added the "more than four" link to the classes yml file

--- a/_data/classes.yml
+++ b/_data/classes.yml
@@ -1,4 +1,5 @@
-card-loop:
+more-than-four-link: /our-classes.html
+card-loop: 
       - image: /images/yoga-studio-3.jpg
         alt:
         heading: Chakra Flow
